# mis-cafomoco

./: .gitignore  LICENSE  README.md
board/pcba/: bom.csv  pcba.kicad_pcb  pcba.kicad_pro  pcba.kicad_sch
cad/exports/dxfs/: enclosure_top.DXF
cad/step/: pcba.step
firmware/: CMakeLists.txt  README.md
firmware/inc/: brushed_motor_controller.h  config.h  core1_main.h  cpu_encoder.h  en_dir_motor_driver.h  motor_controller.h  user_io_handler.h
firmware/src/: brushed_motor_controller.cpp  core1_main.cpp  cpu_encoder.cpp  en_dir_motor_driver.cpp  hello_world.c  hello_world.cpp  main.cpp  motor_controller.cpp  user_io_handler.cpp
hardware/cad/exports/dxfs/: enclosure_bottom.DXF
hardware/enclosure/exports/dxfs/: enclosure_bottom.DXF  enclosure_top.DXF
hardware/enclosure/exports/stls/: enclosure_body.STL
hardware/enclosure/solidworks/: enclosure.SLDPRT
hardware/firmware/inc/: user_io_handler.h
hardware/firmware/src/: en_dir_motor_driver.cpp  main.cpp
hardware/pcb/: pcba.kicad_pcb  pcba.kicad_pro  pcba.kicad_sch
software/: setup.py
software/examples/: multicam_demo.py  multicam_prompt.py
software/multicam_focus/: __init__.py  multicam_focus.py
